--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="answer5_fear">I can\'t think clearly</string>
 
     <string name="selectCharacter">Select the best character for me</string>
+    <string name="resultTitle">Your character description</string>
 
 </resources>
